# simple_robots

./: LICENSE  README.md
simple_description/: CMakeLists.txt  package.xml
simple_description/config/: simple_base_display.rviz
simple_description/launch/: simple_base_display.launch
simple_description/urdfs/: simple_base.gazebo.xacro  simple_base.urdf.xacro
simple_gazebo/: CMakeLists.txt  package.xml
simple_gazebo/launch/: empty_world.launch
