<?xml version="1.0"?>
<package format="2">
  <name>simple_description</name>
  <version>0.0.0</version>
  <description>The simple_description package</description>

  <author email="hvpandya@ncsu.edu">Harsh Pandya</author>
  <maintainer email="hvpandya@ncsu.edu">Harsh Pandya</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
